package head;

option java_package = "hc.head";
option java_outer_classname = "ProtoHead";

message Head {
  required uint32 srcID = 1;
  required uint32 desID = 2;        // Unique ID number for this person.
  required ProtoType type = 3;
  required uint32 protoID = 4;

  enum ProtoType {
    PROTOBUF = 0;
  }
}